# ProductPriceMonitor

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: swagger_schemas.py  urls.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  price.py
api/serializers/: price.py  product.py
api/tests/: price.py  product.py
api/views/: price.py  product.py
app/: settings.py  urls.py
